							   -*- coding: utf-8 -*-
			     BZFlag Release Notes                           
			     ====================

BZFlag 2.99.x (development for 3.0 http://my.bzflag.org/w/BZFlag_3.0 )
------------

* added deiconify along with fullscreen iconify support - Sean Morrison
* Allow per-locale default and user-specified fonts - Daniel Remenak
* Handle Unicode input and keybindings - Daniel Remenak
* Correctly render Unicode (UTF8) localizations - Daniel Remenak, Alexander Law
* Russian translation - Alexander Law
* Added new BZFS API event bz_eIdBanEvent - Steven Mertens
* Fix -configdir on client - Scott Wichser, Steven Mertens
* Server operators no longer automatically override antiban - Daniel Remenak
* New tank explosion pattern - Luke Rewega
* Exposed pauseOnMinimize local variable for iconify pausing - Sean Morrison
* Added a new flag, Cloaked Shot - Alexander Boyd
* screenshots now compressed asynchronously - Daniel Remenak, randomparticle
* Slot numbers on scoreboard now appear regardless of hideAdmin - Joshua Bodine
* Allow plugins to register custom flag types - Daniel Remenak
* improved French localization - Christophe Henry
* clean up various keypress warnings, add slow motion warning - Sean Morrison
* changed default slow motion key binding from 'a' to 'v' - Sean Morrison
* added the ability to query ping times on the server menu - Phillip Vaxorcist
* wings more realistic now only adding to current velocity - Phillip Vaxorcist
* fixed issues on some SMP Linux systems due to bad timekeeping - biggeruniverse
* fixed bug where players sometimes received duplicate messages - Joshua Bodine
* New font system - Sean Morrison, Jeff Myers
* Fixed framerate jitter-inducing bug on SMP systems - Sean Morrison
* Add -filterAnnounce server option - Bernt Hansen
* framerate independent keyboard turn dampening - Sean Morrison, randomparticle
* Added new bzfs -botsPerIP option to limit bot connections - Sean Morrison
* Updated zlib to version 1.2.3 - Sean Morrison